# nexus

./: .env.example  .gitignore  .railwayignore  CLAUDE.md  CONTRIBUTING.md  OVERNIGHT_PLAN.md  README.md  SECURITY.md  requirements.txt  start.sh
backend/: README.md  pyproject.toml
backend/app/: auth.py  config.py  db.py  embeddings.py  llm.py  main.py  media_storage.py  notify.py  queue.py  scrape.py  seats.py  simulation_history.py  twelvelabs.py  vapi_assistant.py  worker.py
backend/app/pipeline/: __init__.py  artifacts.py  pain.py  (+25 more)
backend/scripts/: backfill_workflow_taxonomy.py  create_admin.py  generate_voice_previews.py  provision_vapi.py  scan_em_dash_claims.py  seed_demo.py
backend/tests/: conftest.py  test_agent_json.py  test_agent_json_output.py  test_artifacts.py  test_attention.py  test_auth.py  test_automation.py  test_backfill_workflow_taxonomy.py  test_chat.py  test_client_seats.py  test_company_report.py  test_compiler.py  test_consent.py  test_context_call.py  test_coverage.py  test_db_pooler_detection.py  test_deep_research.py  test_delete_cancels_jobs.py  test_delete_interview.py  test_delete_workspace.py  test_delete_workspace_preview.py  test_demo_transcript.py  test_disclosure.py  test_discovery.py  test_eval_bootstrap.py  test_extract_media_share.py  test_golden_compiler.py  test_handler_session_gone.py  test_handoff.py  test_health.py  test_immutability.py  test_incidents.py  test_intake.py  test_integrations.py  test_internal_flags.py  test_interview.py  test_live_capture.py  test_media_shares.py  test_media_storage.py  test_nexus_check.py  (+34 more)
(+409 files in other folders)
